# langgraph-compass

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.cursor/rules/: compass.mdc
.github/workflows/: ci.yml  publish.yml  sync-hf-space.yml
demo/: README.md  app.py  requirements.txt
docs/: evals-design.md
examples/: evals_example.py  inject_into_response.py  parallel_execution.py  quickstart.py  sample_eval_data.jsonl
src/compass/: __init__.py  generator.py  helpers.py  node.py  ranker.py  triggers.py
src/compass/evals/: __init__.py  cli.py  datasets.py  evaluators.py  metrics.py  models.py  reporters.py  runner.py
tests/: __init__.py  conftest.py  test_evals.py  test_generator.py  test_helpers.py  test_integration.py  test_node.py  test_ranker.py  test_triggers.py
