[project]
name = "langgraph-compass"
version = "1.0.1"
description = "Intelligent follow-up question generation for LangGraph agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Aman Sardana" }
]
keywords = [
    "langgraph",
    "langchain",
    "follow-up",
    "questions",
    "conversational-ai",
    "agents",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=1.1.7",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/sardanaaman/langgraph-compass"
Documentation = "https://github.com/sardanaaman/langgraph-compass#readme"
Repository = "https://github.com/sardanaaman/langgraph-compass"
Issues = "https://github.com/sardanaaman/langgraph-compass/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compass"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "requires_llm: marks tests that require an actual LLM (deselect with '-m \"not requires_llm\"')",
]
